--- a/cheat-menu/config.ini
+++ b/cheat-menu/config.ini
@@ -18,6 +18,7 @@ NEVER_TIRED=FALSE
 MISSION_TIMER_FROZEN=FALSE
 WANTED_LEVEL_FROZEN=FALSE
 WANTED_LEVEL=0
+FIRST_PERSON_CAMERA=TRUE
 
 [WORLD]
 MIN_DENSITY=0
